# task_manager

./: .gitignore  Dockerfile  README.md  database_dailywork  db_test.db  docker-compose.yml  pyproject.toml  requirements.in
src/: config.py  database.py  main.py  models.py
src/core/: config.py  database.py  dependencies.py  errors.py
src/static/: index.css
src/template/: base.html  task_card.html
templates/: about.html  base.html  create_work_form.html  index.html  work_card.html
tests/: test_database.py
